--- a/moscow/style.css
+++ b/moscow/style.css
@@ -1,23 +1,19 @@
 @font-face {
     font-family: "Commissioner";
     font-weight: 300 300;
-    src: local("Commissioner Light")
-         local("Commissioner-Light")
-           /* относительные ссылки на шрифты, в теории, заставят их много дублироваться */
-           /* на практике в любом адекватном браузере эти шрифты весят меньше, чем сам текст */
-           url("fonts/Commissioner-Light.woff2") format("woff2")
-           url("fonts/Commissioner-Light.woff") format("woff")
-           url("fonts/Commissioner-Light.ttf") format("truetype");
+   /* относительные ссылки на шрифты, в теории, заставят их много дублироваться */
+   /* на практике в любом адекватном браузере эти шрифты весят меньше, чем сам текст */
+    src: url("fonts/Commissioner-Light.woff2") format("woff2")
+         url("fonts/Commissioner-Light.woff") format("woff")
+         url("fonts/Commissioner-Light.ttf") format("truetype");
 }
 
 @font-face {
     font-family: "Commissioner";
     font-weight: 600 600;
-    src: local("Commissioner SemiBold")
-         local("Commissioner-SemiBold")
-           url("fonts/Commissioner-SemiBold.woff2") format("woff2")
-           url("fonts/Commissioner-SemiBold.woff") format("woff")
-           url("fonts/Commissioner-SemiBold.ttf") format("truetype");
+    src: url("fonts/Commissioner-SemiBold.woff2") format("woff2")
+         url("fonts/Commissioner-SemiBold.woff") format("woff")
+         url("fonts/Commissioner-SemiBold.ttf") format("truetype");
 }
 
 body, html {
